fixed css on ios?

--- a/src/components/stylesheets/i.css
+++ b/src/components/stylesheets/i.css
@@ -670,9 +670,6 @@ a {
 }
 a:hover {
   opacity: 0.6;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
 a:active,
 a:focus {
@@ -688,9 +685,6 @@ article a {
 }
 article a:hover {
   opacity: 0.6;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
 article a:active,
 article a:focus {
